performed data cleaning

--- a/employee_exit_survey_analysis.ipynb
+++ b/employee_exit_survey_analysis.ipynb
@@ -746,7 +746,436 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are several columns that are the same but are named differently. Furthermore, many columns ought to be removed for this specific analysis. Columns 28:49 are dropped."
+    "## Data Cleaning\n",
+    "There are several columns that are the same but are named differently. Furthermore, many columns ought to be removed for this specific analysis. Columns 28:49 are dropped from the `dete_survey` dataset and columns 17:66 are dropped from the `tafe_survey`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dete_survey.drop(dete_survey.columns[28:49], axis = 1, inplace = True)\n",
+    "tafe_survey.drop(tafe_survey.columns[17:66], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next the column names are standardized.\n",
+    "- All capitilization is made lowercase\n",
+    "- Trailing white space is removed\n",
+    "- Spaces are replaced with underscores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dete_survey.columns = dete_survey.columns.str.replace(' ', '_').str.strip().str.lower()\n",
+    "new_columns = {'Record ID': 'id',\n",
+    "              'CESSATION YEAR' : 'cease_date',\n",
+    "              'Reason for ceasing employment': 'separationtype',\n",
+    "              'Gender. What is your Gender?': 'gender',\n",
+    "              'CurrentAge. Current Age': 'age',\n",
+    "              'Employment Type. Employment Type': 'employment_status',\n",
+    "              'Classification. Classification': 'position',\n",
+    "              'LengthofServiceOverall. Overall Length of Service at Institute (in years)': 'institute_service',\n",
+    "              'LengthofServiceCurrent. Length of Service at current workplace (in years)': 'role_service'\n",
+    "              }\n",
+    "tafe_survey.rename(columns = new_columns, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the interest is only with people that resigned, new datasets `dete_resignations` and `tafe_resignations` are made containing only the people that resigned.\n",
+    "First the different separation types are listed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resignation                         311\n",
+      "Age Retirement                      285\n",
+      "Voluntary Early Retirement (VER)     67\n",
+      "Ill Health Retirement                61\n",
+      "Other                                49\n",
+      "Contract Expired                     34\n",
+      "Termination                          15\n",
+      "Name: separationtype, dtype: int64\n",
+      "\n",
+      "\n",
+      "Resignation                 340\n",
+      "Contract Expired            127\n",
+      "Retrenchment/ Redundancy    104\n",
+      "Retirement                   82\n",
+      "Transfer                     25\n",
+      "Termination                  23\n",
+      "Name: separationtype, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dete_survey['separationtype'].value_counts())\n",
+    "print('\\n')\n",
+    "print(tafe_survey['separationtype'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 3 different resignation types in the `dete_survey` dataset. Therefore, the dataset is updated to collect these three different types as one variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Resignation                         311\n",
+       "Age Retirement                      285\n",
+       "Voluntary Early Retirement (VER)     67\n",
+       "Ill Health Retirement                61\n",
+       "Other                                49\n",
+       "Contract Expired                     34\n",
+       "Termination                          15\n",
+       "Name: separationtype, dtype: int64"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_survey['separationtype'] = dete_survey['separationtype'].str.split('-').str[0]\n",
+    "dete_survey['separationtype'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dete_resignations = dete_survey[dete_survey['separationtype'] == 'Resignation'].copy()\n",
+    "tafe_resignations = tafe_survey[tafe_survey['separationtype'] == 'Resignation'].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next the data is checked for logical inconsistencies. For this the `cease_date` column is investigated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012       126\n",
+       "2013        74\n",
+       "01/2014     22\n",
+       "12/2013     17\n",
+       "06/2013     14\n",
+       "09/2013     11\n",
+       "11/2013      9\n",
+       "07/2013      9\n",
+       "10/2013      6\n",
+       "08/2013      4\n",
+       "05/2013      2\n",
+       "05/2012      2\n",
+       "09/2010      1\n",
+       "2010         1\n",
+       "07/2012      1\n",
+       "07/2006      1\n",
+       "Name: cease_date, dtype: int64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_resignations['cease_date'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2013.0    146\n",
+       "2012.0    129\n",
+       "2014.0     22\n",
+       "2010.0      2\n",
+       "2006.0      1\n",
+       "Name: cease_date, dtype: int64"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_resignations['cease_date'] = dete_resignations['cease_date'].str.split('/').str[-1].astype('float')\n",
+    "dete_resignations['cease_date'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2009.0      2\n",
+       "2013.0     55\n",
+       "2010.0     68\n",
+       "2012.0     94\n",
+       "2011.0    116\n",
+       "Name: cease_date, dtype: int64"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['cease_date'].value_counts().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1963.0     1\n",
+       "1971.0     1\n",
+       "1972.0     1\n",
+       "1984.0     1\n",
+       "1977.0     1\n",
+       "1987.0     1\n",
+       "1975.0     1\n",
+       "1973.0     1\n",
+       "1982.0     1\n",
+       "1974.0     2\n",
+       "1983.0     2\n",
+       "1976.0     2\n",
+       "1986.0     3\n",
+       "1985.0     3\n",
+       "2001.0     3\n",
+       "1995.0     4\n",
+       "1988.0     4\n",
+       "1989.0     4\n",
+       "1991.0     4\n",
+       "1997.0     5\n",
+       "1980.0     5\n",
+       "1993.0     5\n",
+       "1990.0     5\n",
+       "1994.0     6\n",
+       "2003.0     6\n",
+       "1998.0     6\n",
+       "1992.0     6\n",
+       "2002.0     6\n",
+       "1996.0     6\n",
+       "1999.0     8\n",
+       "2000.0     9\n",
+       "2013.0    10\n",
+       "2009.0    13\n",
+       "2006.0    13\n",
+       "2004.0    14\n",
+       "2005.0    15\n",
+       "2010.0    17\n",
+       "2012.0    21\n",
+       "2007.0    21\n",
+       "2008.0    22\n",
+       "2011.0    24\n",
+       "Name: dete_start_date, dtype: int64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_resignations['dete_start_date'].value_counts().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The years in both dataframes don't completely align. The tafe_survey_updated dataframe contains some cease dates in 2009, but the dete_survey_updated dataframe does not. The tafe_survey_updated dataframe also contains many more cease dates in 2010 than the dete_survey_updaed dataframe. Since we aren't concerned with analyzing the results by year, we'll leave them as is.   \n",
+    "   \n",
+    "As `tafe_resignations` already has a service column named `institute_service`, but `dete_resignations` does not, this column is added to the dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dete_resignations['institute_service'] = dete_resignations['cease_date'] - dete_resignations['dete_start_date']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, any employees who resigned because they were dissatisfied will be identified.\n",
+    "For the `tafe_resignation` the following factors were taken into account:\n",
+    "- Contributing Factors. Dissatisfaction\n",
+    "- Contributing Factors. Job Dissatisfaction\n",
+    "   \n",
+    "For the `dete_resignation` the following factors were taken into account:\n",
+    "- job_dissatisfaction\n",
+    "- dissatisfaction_with_the_department\n",
+    "- physical_work_environment\n",
+    "- lack_of_recognition\n",
+    "- lack_of_job_security\n",
+    "- work_location\n",
+    "- employment_conditions\n",
+    "- work_life_balance\n",
+    "- workload\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                                         277\n",
+       "Contributing Factors. Dissatisfaction      55\n",
+       "Name: Contributing Factors. Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                      270\n",
+       "Job Dissatisfaction     62\n",
+       "Name: Contributing Factors. Job Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Job Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_vals(element):\n",
+    "    if element == '-':\n",
+    "        return False\n",
+    "    elif pd.isnull(element):\n",
+    "        return np.nan\n",
+    "    else:\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tafe_resignations[['Contributing Factors. Job Dissatisfaction', 'Contributing Factors. Job Dissatisfaction']] = tafe_resignations[['Contributing Factors. Job Dissatisfaction', 'Contributing Factors. Job Dissatisfaction']].applymap(update_vals)\n",
+    "tafe_resignations['dissatisfied'] = tafe_resignations[['Contributing Factors. Job Dissatisfaction', 'Contributing Factors. Job Dissatisfaction']].any(1, skipna = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    270\n",
+       "True      62\n",
+       "NaN        8\n",
+       "Name: dissatisfied, dtype: int64"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['dissatisfied'].value_counts(dropna = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_dissatisfied = ['job_dissatisfaction',\n",
+    "       'dissatisfaction_with_the_department', 'physical_work_environment',\n",
+    "       'lack_of_recognition', 'lack_of_job_security', 'work_location',\n",
+    "       'employment_conditions', 'work_life_balance',\n",
+    "       'workload']\n",
+    "dete_resignations['dissatisfied'] = dete_resignations[list_dissatisfied].any(1, skipna = False)"
    ]
   },
   {
